@@ -1,6 +1,6 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/gdevilspie/gdevilspie-0.31.ebuild,v 1.2 2008/12/17 04:57:20 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/gdevilspie/gdevilspie-0.31.ebuild,v 1.3 2009/12/23 15:51:51 ssuominen Exp $
 
 inherit distutils
 
@@ -14,6 +14,7 @@ KEYWORDS="~amd64 ~x86"
 IUSE=""
 
 RDEPEND=">=dev-python/pygtk-2
+	dev-python/libwnck-python
 	x11-misc/devilspie"
 DEPEND="${RDEPEND}"
 
