@@ -1,6 +1,10 @@
 # ChangeLog for x11-misc/gdevilspie
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/gdevilspie/ChangeLog,v 1.2 2008/12/17 04:57:20 ssuominen Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/gdevilspie/ChangeLog,v 1.3 2009/12/23 15:51:51 ssuominen Exp $
+
+  23 Dec 2009; Samuli Suominen <ssuominen@gentoo.org>
+  gdevilspie-0.31.ebuild:
+  Missing dev-python/libwnck-python depend wrt #296093 by James Broadhead.
 
   17 Dec 2008; <ssuominen@gentoo.org> gdevilspie-0.31.ebuild:
   Keyword ~x86 wrt #250973
